// Copyright (c) technicianted. All rights reserved.
// Licensed under the MIT License.
syntax = "proto3";

package k9sautoscaler.providers.metrics.proto;

option go_package = "k9s-autoscaler/pkg/providers/merics/proto;proto";

import "google/protobuf/duration.proto";

// Define a load entry for a given duration.
message MetricLoad {
    // Duration to maintain load.
    google.protobuf.Duration timespan = 1;
    // Simulated total load.
    double load = 2;
}

// Define a metrics configuration for an autoscaler.
message AutoscalerConfig {
    string autoscaler_name = 1;
    string autoscaler_namespace = 2;
    // Assumed max load per instance to be able to calculate load percentage.
    double max_load_per_instance = 3;
    // One or more load schedule entries.
    repeated MetricLoad load = 4;
}

// Simulated metrics config.
// see: examples/intree/sim.yaml for an example.
message SimMetricsConfig {
    enum SelectorKeys {
        AUTOSCALER_NAME = 0;
    }

    string metric_name = 1;
    repeated AutoscalerConfig autoscalers_config = 2; 
}

// Dummy scaling target config. Not used for this provider.
message ScalingTargetConfig {
}